updated the logger